Making change to the title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <!-- change from div to header  -->
-      <h1>Horiseon<span class="seo">seo</span></h1>
+      <h1>Horiseon<span class="seo"></span></h1>
       <!-- give the name Horiseon -->
       <nav>
         <!-- change from div to nav  -->
