Adding different title for the web

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- added meta viewport -->
     <link rel="stylesheet" href="./assets/css/style.css"/>
-    <title>website</title>
+    <title>Horiseon</title>
   </head>
 
   <body>
